<resources>
    <string name="app_name">ALC 4.0: Phase 1 Challenge- Android</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="desc">desc</string>
    <string name="abdulmalik_ango">Abdulmalik Ango</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_abdulmalikango_gmail_com">Email: abdulmalikango@gmail.com</string>
    <string name="phone_number_234810974141">Phone Number: 234810974141</string>
    <string name="slack_username_abdulmalik_ango">Slack Username:Abdulmalik Ango</string>
    <string name="notification_error_ssl_cert_invalid" />
</resources>
