<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="209dp"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:contentDescription="@string/desc"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="48dp"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:text="@string/abdulmalik_ango"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="231dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/track_android"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/country_nigeria"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/email_abdulmalikango_gmail_com"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/phone_number_234810974141"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="397dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/slack_username_abdulmalik_ango"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
    </LinearLayout>

</RelativeLayout>