<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome_to_alc_4_0"
        android:textSize="28sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#F9AA33"
        android:fontFamily="@font/aclonica"
        android:padding="16dp"
        android:text="@string/about_alc"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignStart="@+id/about"
        android:layout_below="@+id/about"
        android:background="#F9AA33"
        android:fontFamily="@font/aclonica"
        android:padding="16dp"
        android:text="@string/my_profile"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="395dp" />

</RelativeLayout>